// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Header component should render correctly 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "backgroundColor": "#6bac43",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      barStyle="light-content"
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "Colfax-Bold",
          "fontSize": 15.75,
          "lineHeight": 17.75,
          "paddingBottom": 1.8,
          "paddingTop": 2.25,
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`The Header component should render with a back button correctly 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "backgroundColor": "#6bac43",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "bottom": 0,
          "left": 4,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hitSlop={undefined}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 50,
            "justifyContent": "center",
          }
        }
        testID={undefined}
      >
        <Svg
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <Path
            d="M14.35 21L6.2 12.46c-.26-.28-.26-.64 0-.92L14.34 3l1.65.9L8.27 12 16 20.1l-1.65.9z"
            fill="#ffffff"
          />
        </Svg>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      barStyle="light-content"
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "Colfax-Bold",
          "fontSize": 15.75,
          "lineHeight": 17.75,
          "paddingBottom": 1.8,
          "paddingTop": 2.25,
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;
